Мобилка для новых страниц

--- a/css/320.css
+++ b/css/320.css
@@ -34,6 +34,11 @@
     top: 5px !important;
   }
 
+  .tinput:focus ~ label.t_label_adaptive {
+    font-size: 9px;
+    top: auto !important;
+  }
+
   .label_in .array_down,
 .label_in .search {
     bottom: 17px;
@@ -284,6 +289,10 @@
   .middle_part {
     float: left;
     width: 100%;
+    overflow: scroll;
+  }
+
+  .middle_part_tooltip {
     overflow: scroll;
   }
 
@@ -647,6 +656,10 @@
 
   .tlabel_adaptive {
     top: 24px !important;
+  }
+
+  .t_label_adaptive {
+    top: auto !important;
   }
 
   .block_nopadding {
