--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1402,7 +1402,8 @@ table.bordered tr td {
 .modal_send,
 .modal_view,
 .modal_sale,
-.modal_sklad {
+.modal_sklad,
+.modal_add_points {
   display: none;
   position: fixed;
   width: 93%;
