--- a/css/style.css
+++ b/css/style.css
@@ -1272,7 +1272,8 @@ table.bordered tr td {
 .modal_send,
 .modal_view,
 .modal_sale,
-.modal_sklad {
+.modal_sklad,
+.modal_add_points {
   display: none;
   position: fixed;
   width: 93%;
@@ -1289,7 +1290,8 @@ table.bordered tr td {
 .modal_send .line_param_down,
 .modal_view .line_param_down,
 .modal_sale .line_param_down,
-.modal_sklad .line_param_down {
+.modal_sklad .line_param_down,
+.modal_add_points .line_param_down {
   position: absolute;
   width: 24px;
   height: 24px;
