--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1403,7 +1403,8 @@ table.bordered tr td {
 .modal_view,
 .modal_sale,
 .modal_sklad,
-.modal_add_points {
+.modal_add_points,
+.modal_add_user {
   display: none;
   position: fixed;
   width: 93%;
