--- a/css/style.css
+++ b/css/style.css
@@ -1273,7 +1273,8 @@ table.bordered tr td {
 .modal_view,
 .modal_sale,
 .modal_sklad,
-.modal_add_points {
+.modal_add_points,
+.modal_add_user {
   display: none;
   position: fixed;
   width: 93%;
@@ -1291,7 +1292,8 @@ table.bordered tr td {
 .modal_view .line_param_down,
 .modal_sale .line_param_down,
 .modal_sklad .line_param_down,
-.modal_add_points .line_param_down {
+.modal_add_points .line_param_down,
+.modal_add_user .line_param_down {
   position: absolute;
   width: 24px;
   height: 24px;
