--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1404,7 +1404,8 @@ table.bordered tr td {
 .modal_sale,
 .modal_sklad,
 .modal_add_points,
-.modal_add_user {
+.modal_add_user,
+.modal_nakl {
   display: none;
   position: fixed;
   width: 93%;
